--- a/css/estilos.css
+++ b/css/estilos.css
@@ -180,3 +180,88 @@ header .textos h3{
     color: #676767;
     clear: both;
 }
+
+/*galeria, ubicacion y footer*/
+
+.main .galeria{
+    overflow: hidden;
+}
+
+.main .galeria .foto{
+    width: 25%;
+    float: left;
+}
+
+.main .galeria .foto img{
+    width: 100%;
+    vertical-align: top;
+    opacity: 0.5;
+}
+
+.main .galeria .foto:hover img{
+    opacity: 1;
+    transition: all .8s ease;
+}
+
+.main .ubicacion{
+    background: #fff;
+    padding: 50px 0;
+    overflow: hidden;
+}
+
+.main .ubicacion .titulo{
+    text-align: center;
+    font-size: 40px;
+    line-height: 40px;
+    font-weight: 300;
+    margin-bottom: 40px;
+}
+
+.main .ubicacion .direccion{
+    float: left;
+    width: 50%;
+    text-align: left;
+}
+
+.main .ubicacion .horarios{
+    float: right;
+    width: 50%;
+    text-align: right;
+    overflow: hidden;
+}
+
+.main .ubicacion .direccion .calle{
+    margin-bottom: 15px;
+}
+
+.main .ubicacion .horarios h4{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.main .ubicacion .horarios .entre-semana,
+.main .ubicacion .horarios .fin-semana{
+    width: 50%;
+    float: left;
+    text-align: center;
+}
+
+.main .mapa{
+    width: 100%;
+    overflow: hidden;
+}
+
+.main .mapa iframe{
+    width: 100%;
+
+}
+
+footer{
+    background: #000;
+}
+
+footer .copy{
+    text-align: center;
+    padding: 15px 0;
+    color: #fff;
+}
